--- a/downlloadmp3/src/main/resources/templates/searchResult.html
+++ b/downlloadmp3/src/main/resources/templates/searchResult.html
@@ -1,99 +1,164 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+<title id="ti"></title>
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
-    <meta name="renderer" content="webkit" />
-    <title>奖牌榜_2018年雅加达亚运会赛会_宝宝不闹网</title>
-    <meta name="keywords" content="2018年雅加达亚运会赛会奖牌榜、雅加达亚运会奖牌榜"/>
-    <meta name="description" content="2018年雅加达亚运会赛会奖牌榜"/>
-    <!-- 公用样式 -->
-    <link type="text/css" rel="stylesheet" href="https://2018ag.sports.qq.com/pc/css/css.css?20180818"/>
-    <!-- 页面样式 -->
-    <!-- 公用脚本 -->
-    <script type="text/javascript" src="//mat1.gtimg.com/libs/jquery/1.12.0/jquery.min.js"></script>
-    <!--[if lt IE 9]>
-    <script src='js/es5-shim.min.js'></script>
-    <![endif]-->
-    <script type="text/javascript" src="https://2018ag.sports.qq.com/pc/js/medal.js?20180818"></script>
+    　　
+    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+    <div id="h1" align="center"></div>
 </head>
+
+<script>
+    $(function getParam() {
+        var url = location.search; //获取url中"?"符后的字串
+        if (url.indexOf("?") != -1) {
+            var str = url.substr(1);
+            $.ajax({
+                type: "get",
+                url: '/getList',
+                data: {url: str},
+                success: function (data) {
+                    $("#musicList").html(data.musicList);
+                    $("#about").html(data.about);
+                    $("#introduce").html(data.introduce);
+                    $("#ti").html(data.title);
+                    $("#h1").html(data.h1);
+                }
+            });
+        }
+    })
+
+</script>
 <body>
-<div class="layout">
-    <div class="mainBox">
-        <!-- 赛事查询模块 -->
-        <div class="scTabMod" id="tabMod">
-            <div class="scTab">
-                <ul>
-                    <li class="now"><a>本届奖牌榜</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="ssDataMod clear">
-            <div class="topBar top-medal clear">
-                <h2 class="left"> <span class="jt"></span>
-                    <div class="tm-tit"> <span class="medal-date" id="field-date">截止到</span> <strong>2018年雅加达亚运会奖牌榜</strong> </div>
-                </h2>
-                <div class="right">
-                    <ul class="list-medal">
-                        <li>金牌：<span id="goldNum">0</span></li>
-                        <li>银牌：<span id="silverNum">0</span></li>
-                        <li>铜牌：<span id="bronzeNum">0</span></li>
-                        <li>总数：<span id="totalNum">0</span></li>
-                    </ul>
+<!--<table id="pingshuList" border="0" cellspacing="0">
+    <tr id="title">
+        <td width="120" bgcolor="#00ffff">
+            <div align="center">
+                <div align="center">
+                    评书名称
                 </div>
             </div>
-            <div class="dataList">
-                <div class="tableTit" id="jpbTit">
-                    <table cellspacing="1" cellpadding="0" border="0">
-                        <colgroup>
-                            <col class="w11" />
-                            <col class="w12" />
-                            <col class="w13" />
-                            <col class="w14" />
-                            <col class="w15" />
-                            <col class="w16" />
-                        </colgroup>
-                        <tr>
-                            <td>名次</td>
-                            <td class="td-country">国家/地区</td>
-                            <td><span class="goldIcon"></span>金牌</td>
-                            <td><span class="silverIcon"></span>银牌</td>
-                            <td><span class="bronzeIcon"></span>铜牌</td>
-                            <td class="">总数</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="tableCon" id="jpbData">
-                    <table cellspacing="1" cellpadding="0" border="0">
-                        <colgroup>
-                            <col class="w11" />
-                            <col class="w12" />
-                            <col class="w13" />
-                            <col class="w14" />
-                            <col class="w15" />
-                            <col class="w16" />
-                        </colgroup>
-                        <tbody>
-                        </tbody>
-                        <tbody class="hidden">
-                        </tbody>
-                    </table>
+        </td>
+        <td width="120" bgcolor="#00ffff">
+            <div align="center">
+                <div align="center">
+                    操作
                 </div>
             </div>
-        </div>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div align="center">
+                <div align="center">
+                    评书名称
+                </div>
+            </div>
+        </td>
+        <td>
+            <div align="center">
+                <div align="center">
+                    操作
+                </div>
+            </div>
+        </td>
+    </tr>
+</table>-->
+
+
+<!--内容主体-->
+
+<div class="mainContext">
+    <div id="introduce"></div>
+    <!--左侧内容-->
+
+    <div class="leftContext">
+        <div id="musicList"></div>
     </div>
-</div>
-<div class="footer">
-    <!--版权页面片 S-->
-    <style>
-        .tcopyright {width:960px;margin:0 auto;padding:8px 0;font-size:12px;line-height:28px;color:#333; text-align:center; overflow:hidden;clear:both;}
-        .tcopyright .en{font-family:Arial;}
-        .tcopyright a{color:#333;text-decoration: none;}
-        .tcopyright a:hover{color:#bd0a01;text-decoration: underline;}
-    </style>
-    <div id="tcopyright" class="tcopyright" bosszone="footer" role="contentinfo">
-        <div class="en">Copyright © 2015 - 2018 Bunaolai. All Rights Reserved</div>
+
+    <!--右侧内容-->
+
+    <div class="rightContext">
+
+        <!--编辑内容-->
+
+        <div class="editorRecommend">
+            <div id="about">
+                相关小说
+            </div>
+
+        </div>
+
     </div>
+
 </div>
+
+<style>
+
+    .mainContext {
+
+        border-bottom: solid 1px #BDBDBD;
+
+        border-left: solid 1px #BDBDBD;
+
+        border-right: solid 1px #BDBDBD;
+
+        width: 80%;
+
+        height: auto;
+
+        background-color: #FFFCEC;
+
+        margin: 0;
+
+        padding: 0;
+
+        position: relative;
+
+        margin-left: auto;
+
+        margin-right: auto;
+
+    }
+
+    /*左侧主体*/
+
+    .leftContext {
+
+        float: left;
+
+        width: 750px;
+
+        border-bottom: 1px solid #BDBDBD;
+
+    }
+
+    /*左侧主体内容1*/
+
+    .leftContextdiv1 {
+
+        float: left;
+
+        width: 750px;
+
+        height: 320px;
+
+        border-bottom: 1px solid #BDBDBD;
+
+    }
+
+    /*右侧主体*/
+
+    .rightContext {
+
+        float: right;
+
+        width: 328px;
+
+        height: 2250px;
+
+        border-left: 1px solid #BDBDBD;
+
+    }
+</style>
 </body>
 </html>
